    exist rather then rendering a warning and continuing.

2006-05-12 cjg

 * Removed debug line from FieldComponent.
 * Moved arround Input plugins to new layout. Fixed some minor issues like
    a missing ISA.
 * Fixed lots of typos and bugs in the FieldComponents to make it actually 
    work with the demo.
 * Added a demo script to check workflow stuff works - remove before beta.

2006-05-16 cjg

 * Moved metafield to Plugin::Field - will break code until the backcomp. 
    stuff is in place.
 * And undid it again because it all went wrong.

2006-05-17 cjg

 * Added experimental OVID link to abstract page
 * generate_workflows now generates a more compressed version with if's
    removed if possible.
 * EPrints::XML now has "strict" mode working properly - some minor fixes
    were required as a result.
 * the XML tidy method now can be told to ignore certain elements.

2006-06-05 cjg

 * Fixed bug in phrase for user homepage.
 * Commented-out code which generates experimental OVID/SFX links
 * Removed use_workflow option - it's not going to be optional.
 * Documents now only update their EPrint if they know what that eprint is
    (workaround for bug)
 * Fixed problem with generate_workflows - the if's needed merge="ANY"
    as they default to ALL.
 * Overhaul of MOJ's components: 
 * Components now know what session and dataobj they are working on.
 * Removed InputField - it now just makes a cloned metafield.
 * If type/page related methods are called on dataset it now loads a 
    bunch of workflows to work out what values to return. It's not very
    efficient, but the plan is to phase it out.
 * Workflow configs are now loaded when eprints start.
 * Added a cheap and cheerful way for staff to search the history.
 * Added a config option to add additional tools to the user home page.

2006-06-09 cjg
 
 * Added methods to append and prepend stages to a workflow.

2006-05-12 cjg

 * Properly commented EPrints::DataObj::History